<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.richardfyoung</groupId>
    <artifactId>customer-work-parent</artifactId>
    <version>2.2.0</version>
    <packaging>pom</packaging>
    <name>customer-work-parent</name>
    <description>基于 AgentScope Java 的生产级智能客服系统（多模块：可复用 starter + 可运行应用）</description>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.5</version>
        <relativePath/>
    </parent>

    <modules>
        <module>customer-work-starter</module>
        <module>customer-work-app-server</module>
        <module>customer-channel</module>
        <module>customer-admin-server</module>
        <module>customer-work-gateway</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <agentscope.version>2.0.0</agentscope.version>
        <springdoc.version>2.3.0</springdoc.version>
        <nacos.version>3.2.3</nacos.version>
        <mybatis-plus.version>3.5.7</mybatis-plus.version>
        <sa-token.version>1.39.0</sa-token.version>
        <minio.version>8.5.17</minio.version>
        <!-- 证书解析（devtoolbox cert_parse/cert_match）：CSR 与 PKCS#1/SEC1 私钥 JDK 原生不认 -->
        <bouncycastle.version>1.81</bouncycastle.version>
        <!-- OpenTelemetry：覆盖 spring-boot-dependencies(3.2.5) 托管的 1.31.0，对齐 agentscope-core 2.0.0
             的编译版本（其 OtelTracingMiddleware 与随之传递进来的 opentelemetry-instrumentation 2.27
             都按 1.61 的 API 编译，instrumentation 还带进不受 Boot 管理的
             opentelemetry-api-incubator:1.61.0-alpha —— 不覆盖就是 api 1.31 + incubator 1.61 的分裂
             classpath）。用属性覆盖而非在某个模块 import BOM：dependencyManagement 不跨兄弟模块传播，
             只钉 starter 会让 app-server / admin-server 运行期把 otel 解析回 1.31.0，与 starter 的
             编译版本对不上。 -->
        <opentelemetry.version>1.61.0</opentelemetry.version>
        <!-- 多租户 ThreadLocal 跨线程传播（Reactor 自动上下文传播的 SPI 提供方）。
             spring-boot-dependencies(3.2.5) 不托管这个坐标，必须显式钉版本；取值与
             micrometer-observation:1.12.5 传递引入的版本一致，避免同一 classpath 上两个版本打架。 -->
        <context-propagation.version>1.1.1</context-propagation.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- AgentScope 2.0 BOM：统一管理 core / harness / extensions 全部坐标版本 -->
            <dependency>
                <groupId>io.agentscope</groupId>
                <artifactId>agentscope-bom</artifactId>
                <version>${agentscope.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- BouncyCastle 三件套统一锁版本：某个传递依赖会把 bcprov 拉回 1.78.1，与直接依赖的
                 bcpkix 1.81 不同代，运行时报 NoSuchFieldError: id_ml_dsa_44（1.81 才加的后量子算法 OID）。
                 bcpkix/bcprov 必须同版本，bcutil 由 bcpkix 带同代修订版即可。 -->
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcprov-jdk18on</artifactId>
                <version>${bouncycastle.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcpkix-jdk18on</artifactId>
                <version>${bouncycastle.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>0.8.12</version>
                    <executions>
                        <execution>
                            <id>prepare-agent</id>
                            <goals><goal>prepare-agent</goal></goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>test</phase>
                            <goals><goal>report</goal></goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <!-- 服务端导出 Excel 不依赖桌面环境；显式 headless，避免 macOS GUI 宿主触发 AWT 注册崩溃。 -->
                        <systemPropertyVariables>
                            <java.awt.headless>true</java.awt.headless>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
